# kore-rs

./: AGENTS.md  Cargo.toml  MEMORY.md  README.md  TODO.md  shell.nix
.direnv/: nix-profile-pre967235.6c9a78c09ff4  nix-profile-pre967235.6c9a78c09ff4.rc
.github/workflows/: release.yml
resources/: kore-rs.application  kore-rs.desktop
src/: app.rs  main.rs
src/effects/: discovery.rs  kodi.rs  mod.rs
src/host/: manager.rs  mod.rs
src/kodi/: client.rs  discovery.rs  mod.rs  types.rs
src/ui/: discovery.rs  host_list.rs  main_window.rs  mod.rs  now_playing.rs  remote.rs
src/ui/discovery/: component.rs  mod.rs
src/ui/host_list/: component.rs  mod.rs
src/ui/now_playing/: component.rs  mod.rs
src/ui/remote/: component.rs  mod.rs
