[package]
name = "korers"
version = "0.1.0"
edition = "2021"
description = "A Rust desktop remote control for Kodi"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/korers"

[dependencies]
gtk = { version = "0.9", package = "gtk4" }
relm4 = { version = "0.9", features = ["gtk4"] }
relm4-macros = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

tokio = { version = "1", features = ["full"] }

dns-sd = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dirs = "5"
thiserror = "2"

image = { version = "0.25", default-features = false, features = ["jpeg"] }

url = "2"

chrono = { version = "0.4", features = ["serde"] }

regex-lite = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
